fix non jar path and test data